# 2024_turtlebot

./: README.md
robit_master/: CMakeLists.txt  README.md  package.xml
robit_master/include/robit_master/: main_window.hpp  qnode.hpp  robit_driving.hpp
robit_master/src/: main.cpp  main_window.cpp  qnode.cpp  robit_driving.cpp
robit_master/ui/: mainwindow.ui
robit_msgs/: CMakeLists.txt  README.md  package.xml
robit_msgs/msg/: MasterMsg.msg  SimpleMoveMsg.msg  VisionMsg.msg
robit_vision/: CMakeLists.txt  README.md  package.xml
robit_vision/include/robit_vision/: main_window.hpp  qnode.hpp  robit_ransac.hpp  vision.hpp
robit_vision/robotis/: parameter_data.txt
robit_vision/src/: main.cpp  main_window.cpp  qnode.cpp  robit_ransac.cpp  vision.cpp
robit_vision/txt_data/: mission_data.txt  parameter_data.txt
robit_vision/ui/: mainwindow.ui
set_imu/: CMakeLists.txt  README.md  package.xml
set_imu/include/set_imu/: set_imu.hpp
set_imu/src/: set_imu.cpp
turtle_go/: CMakeLists.txt  README.md  package.xml
turtle_go/include/turtle_go/: main_window.hpp
turtle_go/launch/: turtle-go.launch.py
turtle_go/src/: main.cpp  main_window.cpp
