<?xml version="1.0"?>
<package>
  <name>robit_master</name>
  <version>0.1.0</version>
  <description>

    robit_master

  </description>
  <maintainer email="hong091788@naver.com">hyeon</maintainer>
  <author>hyeon</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>robit_msgs</build_depend>
  <build_depend>turtlebot3_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>