<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>set_imu</name>
  <version>0.0.0</version>
  <description>The set_imu package</description>
  <maintainer email="abab4551817@kw.ac.kr">hyeon</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>